// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TagInput rendering renders expected elements 1`] = `
<Layer
  className="TagInput"
  id="random-id-tags"
>
  <span
    aria-live="assertive"
    className="sr-only"
  />
  <Tag
    className="TagInput__tag"
    data-index={0}
    onRemove={[Function]}
    removeTitle="Remove foo"
    text="foo"
    type="gray"
  />
  <Tag
    className="TagInput__tag"
    data-index={1}
    onRemove={[Function]}
    removeTitle="Remove bar"
    text="bar"
    type="gray"
  />
  <input
    aria-invalid={false}
    className="TagInput__input"
    id="random-id"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
</Layer>
`;

exports[`TagInput rendering renders expected elements when disabled 1`] = `
<Layer
  className="TagInput TagInput--disabled"
  id="random-id-tags"
>
  <span
    aria-live="assertive"
    className="sr-only"
  />
  <Tag
    aria-disabled={true}
    className="TagInput__tag"
    data-index={0}
    onRemove={null}
    removeTitle="Remove foo"
    text="foo"
    type="gray"
  />
  <Tag
    aria-disabled={true}
    className="TagInput__tag"
    data-index={1}
    onRemove={null}
    removeTitle="Remove bar"
    text="bar"
    type="gray"
  />
  <input
    aria-invalid={false}
    className="TagInput__input"
    disabled={true}
    id="random-id"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
</Layer>
`;

exports[`TagInput rendering renders expected elements when disabled and defaultTags is set 1`] = `
<Layer
  className="TagInput TagInput--disabled"
  id="random-id-tags"
>
  <span
    aria-live="assertive"
    className="sr-only"
  />
  <Tag
    aria-disabled={true}
    className="TagInput__defaultTag"
    text="foo"
    type="gray"
  />
  <Tag
    aria-disabled={true}
    className="TagInput__defaultTag"
    text="bar"
    type="gray"
  />
  <input
    aria-invalid={false}
    className="TagInput__input"
    disabled={true}
    id="random-id"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
</Layer>
`;

exports[`TagInput rendering renders expected elements when optional properties are set 1`] = `
<Layer
  className="TagInput TagInput--error TestClass"
  id="random-id-tags"
>
  <span
    aria-live="assertive"
    className="sr-only"
  />
  <Tag
    className="TagInput__tag"
    data-index={0}
    onRemove={[Function]}
    removeTitle="Remove foo"
    text="foo"
    type="gray"
  />
  <Tag
    className="TagInput__tag"
    data-index={1}
    onRemove={[Function]}
    removeTitle="Remove bar"
    text="bar"
    type="gray"
  />
  <input
    aria-invalid={true}
    className="TagInput__input"
    id="random-id"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
</Layer>
`;

exports[`TagInput rendering renders expected elements when tags is empty and defaultTags is not set 1`] = `
<Layer
  className="TagInput"
  id="random-id-tags"
>
  <span
    aria-live="assertive"
    className="sr-only"
  />
  <input
    aria-invalid={false}
    className="TagInput__input"
    id="random-id"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
</Layer>
`;

exports[`TagInput rendering renders expected elements when tags is empty and defaultTags is set 1`] = `
<Layer
  className="TagInput"
  id="random-id-tags"
>
  <span
    aria-live="assertive"
    className="sr-only"
  />
  <Tag
    className="TagInput__defaultTag"
    text="foo"
    type="gray"
  />
  <Tag
    className="TagInput__defaultTag"
    text="bar"
    type="gray"
  />
  <input
    aria-invalid={false}
    className="TagInput__input"
    id="random-id"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
</Layer>
`;
